content/v1.3.15/zh/api/save-system/_index.md
---
title: "save-system 目录"
description: TaleWorlds.SaveSystem 存档系统类参考目录
---
<!-- BEGIN SECTION INDEX -->

## ↑ 上级导航

- [API 参考](../)
- [版本首页](../../)

## ↓ 子类列表 — 按字母分组

### A

- [ArchiveConcurrentSerializer](./ArchiveConcurrentSerializer)
- [ArchiveDeserializer](./ArchiveDeserializer)
- [ArchiveSerializer](./ArchiveSerializer)
- [AsyncFileSaveDriver](./AsyncFileSaveDriver)
- [AutoGeneratedSaveManager](./AutoGeneratedSaveManager)

### B

- [BasicTypeDefinition](./BasicTypeDefinition)
- [BinaryWriterFactory](./BinaryWriterFactory)
- [BoolBasicTypeSerializer](./BoolBasicTypeSerializer)
- [ByteBasicTypeSerializer](./ByteBasicTypeSerializer)

### C

- [ColorBasicTypeSerializer](./ColorBasicTypeSerializer)
- [ContainerDefinition](./ContainerDefinition)
- [ContainerHeaderLoadData](./ContainerHeaderLoadData)
- [ContainerLoadData](./ContainerLoadData)
- [ContainerSaveData](./ContainerSaveData)
- [ContainerSaveId](./ContainerSaveId)
- [ContainerType](./ContainerType)
- [CustomField](./CustomField)

### D

- [DefinitionContext](./DefinitionContext)
- [DoubleBasicTypeSerializer](./DoubleBasicTypeSerializer)

### E

- [ElementLoadData](./ElementLoadData)
- [ElementSaveData](./ElementSaveData)
- [EntryId](./EntryId)
- [EnumDefinition](./EnumDefinition)

### F

- [FieldDefinition](./FieldDefinition)
- [FieldLoadData](./FieldLoadData)
- [FieldSaveData](./FieldSaveData)
- [FileDriver](./FileDriver)
- [FloatBasicTypeSerializer](./FloatBasicTypeSerializer)
- [FolderId](./FolderId)

### G

- [GameData](./GameData)
- [GenericSaveId](./GenericSaveId)
- [GenericTypeDefinition](./GenericTypeDefinition)

### I

- [IArchiveContext](./IArchiveContext)
- [IAutoGeneratedSaveManager](./IAutoGeneratedSaveManager)
- [IBasicTypeSerializer](./IBasicTypeSerializer)
- [IConflictResolver](./IConflictResolver)
- [IEnumResolver](./IEnumResolver)
- [InMemDriver](./InMemDriver)
- [IntBasicTypeSerializer](./IntBasicTypeSerializer)
- [InterfaceDefinition](./InterfaceDefinition)
- [IObjectResolver](./IObjectResolver)
- [ISaveContext](./ISaveContext)
- [ISaveDriver](./ISaveDriver)
- [ISavedStruct](./ISavedStruct)

### L

- [LateLoadInitializationCallback](./LateLoadInitializationCallback)
- [LegacyGameDataDeserializer](./LegacyGameDataDeserializer)
- [LegacySaveContext](./LegacySaveContext)
- [LoadCallbackInitializator](./LoadCallbackInitializator)
- [LoadContext](./LoadContext)
- [LoadData](./LoadData)
- [LoadError](./LoadError)
- [LoadInitializationCallback](./LoadInitializationCallback)
- [LoadResult](./LoadResult)
- [LongBasicTypeSerializer](./LongBasicTypeSerializer)

### M

- [Mat2BasicTypeSerializer](./Mat2BasicTypeSerializer)
- [Mat3BasicTypeSerializer](./Mat3BasicTypeSerializer)
- [MatrixFrameBasicTypeSerializer](./MatrixFrameBasicTypeSerializer)
- [MemberDefinition](./MemberDefinition)
- [MemberLoadData](./MemberLoadData)
- [MemberSaveData](./MemberSaveData)
- [MemberTypeId](./MemberTypeId)
- [MetaData](./MetaData)
- [MetaDataExtensions](./MetaDataExtensions__TaleWorlds_SaveSystem)

### O

- [ObjectHeaderLoadData](./ObjectHeaderLoadData)
- [ObjectLoadData](./ObjectLoadData)
- [ObjectSaveData](./ObjectSaveData)

### P

- [PropertyDefinition](./PropertyDefinition)
- [PropertyLoadData](./PropertyLoadData)
- [PropertySaveData](./PropertySaveData)

### Q

- [QuaternionBasicTypeSerializer](./QuaternionBasicTypeSerializer)

### S

- [SaveableBasicTypeDefiner](./SaveableBasicTypeDefiner)
- [SaveableFieldAttribute](./SaveableFieldAttribute)
- [SaveableInterfaceAttribute](./SaveableInterfaceAttribute)
- [SaveablePropertyAttribute](./SaveablePropertyAttribute)
- [SaveableRootClassAttribute](./SaveableRootClassAttribute)
- [SaveableTypeDefiner](./SaveableTypeDefiner)
- [SaveCodeGenerationContext](./SaveCodeGenerationContext)
- [SaveCodeGenerationContextAssembly](./SaveCodeGenerationContextAssembly)
- [SaveContext](./SaveContext)
- [SavedMemberType](./SavedMemberType)
- [SaveEntry](./SaveEntry)
- [SaveEntryExtension](./SaveEntryExtension)
- [SaveEntryFolder](./SaveEntryFolder)
- [SaveError](./SaveError)
- [SaveFolderExtension](./SaveFolderExtension)
- [SaveGameFileInfo](./SaveGameFileInfo)
- [SaveId](./SaveId)
- [SaveManager](./SaveManager)
- [SaveOutput](./SaveOutput)
- [SaveStatistics](./SaveStatistics)
- [SbyteBasicTypeSerializer](./SbyteBasicTypeSerializer)
- [ShortBasicTypeSerializer](./ShortBasicTypeSerializer)
- [StringSerializer](./StringSerializer)
- [StructDefinition](./StructDefinition)

### T

- [TypeDefinition](./TypeDefinition)
- [TypeDefinitionBase](./TypeDefinitionBase)
- [TypeExtensions](./TypeExtensions)
- [TypeSaveId](./TypeSaveId)

### U

- [UintBasicTypeSerializer](./UintBasicTypeSerializer)
- [UlongBasicTypeSerializer](./UlongBasicTypeSerializer)
- [UshortBasicTypeSerializer](./UshortBasicTypeSerializer)

### V

- [VariableLoadData](./VariableLoadData)
- [VariableSaveData](./VariableSaveData)
- [Vec2BasicTypeSerializer](./Vec2BasicTypeSerializer)
- [Vec2iBasicTypeSerializer](./Vec2iBasicTypeSerializer)
- [Vec3BasicTypeSerializer](./Vec3BasicTypeSerializer)
- [Vec3iBasicTypeSerializer](./Vec3iBasicTypeSerializer)

### Z

- [ZipExtensions](./ZipExtensions)


<!-- END SECTION INDEX -->
